crates/cli/tests/snapshots/snapshot_tests__json_workspace_deps.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "schema_version": 6,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 2,
  "summary": {
    "total_issues": 2,
    "unused_files": 0,
    "unused_exports": 0,
    "unused_types": 0,
    "private_type_leaks": 0,
    "unused_dependencies": 2,
    "unused_enum_members": 0,
    "unused_class_members": 0,
    "unresolved_imports": 0,
    "unlisted_dependencies": 0,
    "duplicate_exports": 0,
    "type_only_dependencies": 0,
    "test_only_dependencies": 0,
    "circular_dependencies": 0,
    "re_export_cycles": 0,
    "boundary_violations": 0,
    "stale_suppressions": 0,
    "unused_catalog_entries": 0,
    "empty_catalog_groups": 0,
    "unresolved_catalog_references": 0,
    "unused_dependency_overrides": 0,
    "misconfigured_dependency_overrides": 0
  },
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "private_type_leaks": [],
  "unused_dependencies": [
    {
      "package_name": "lodash",
      "location": "dependencies",
      "path": "packages/ui/package.json",
      "line": 5,
      "actions": [
        {
          "type": "remove-dependency",
          "auto_fixable": true,
          "description": "Remove from dependencies in package.json"
        },
        {
          "type": "add-to-config",
          "auto_fixable": false,
          "description": "Add \"lodash\" to ignoreDependencies in plow config",
          "config_key": "ignoreDependencies",
          "value": "lodash",
          "value_schema": "https://raw.githubusercontent.com/plow-rs/plow/main/schema.json#/properties/ignoreDependencies/items"
        }
      ]
    }
  ],
  "unused_dev_dependencies": [
    {
      "package_name": "jest",
      "location": "devDependencies",
      "path": "packages/ui/package.json",
      "line": 5,
      "actions": [
        {
          "type": "remove-dependency",
          "auto_fixable": true,
          "description": "Remove from devDependencies in package.json"
        },
        {
          "type": "add-to-config",
          "auto_fixable": false,
          "description": "Add \"jest\" to ignoreDependencies in plow config",
          "config_key": "ignoreDependencies",
          "value": "jest",
          "value_schema": "https://raw.githubusercontent.com/plow-rs/plow/main/schema.json#/properties/ignoreDependencies/items"
        }
      ]
    }
  ],
  "unused_optional_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "test_only_dependencies": [],
  "circular_dependencies": [],
  "re_export_cycles": [],
  "boundary_violations": [],
  "stale_suppressions": [],
  "unused_catalog_entries": [],
  "empty_catalog_groups": [],
  "unresolved_catalog_references": [],
  "unused_dependency_overrides": [],
  "misconfigured_dependency_overrides": []
}
