crates/cli/tests/snapshots/snapshot_tests__markdown_circular_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Circular dependencies (1)

- `src/a.ts` → `src/b.ts` → `src/a.ts`
