crates/cli/tests/snapshots/snapshot_tests__markdown_duplicate_exports_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Duplicate exports (1)

- `Config` in `src/config.ts`, `src/types.ts`
